Added a second header with username
added a second header using text saying 'johannesburger'

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <script src="./script.js"></script>
     <h1>AYJ Tutoring</h1>
+    <h2>Johannesburger, welcome!</h2>
     
 </body>
 </html>
