Added a welcome paragraph
Added a paragraph welcoming user onto webpage and listing school

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script src="./script.js"></script>
     <h1>AYJ Tutoring</h1>
     <h2>Johannesburger, welcome!</h2>
+
+    <p>Welcom to the AYJ Tutoring Website, run in collab with A.Y Jackson Secondary School.</p>
     
 </body>
 </html>
